fix: Add a max-height to the event log content with scroll overflow

--- a/src/frontend/styles/components/event_log.styl
+++ b/src/frontend/styles/components/event_log.styl
@@ -339,11 +339,12 @@ label
 
 .eventLog-text
   padding-top: 4px !important
-  line-height: 16px !important
+  line-height: 20px !important
   padding-bottom: 0px !important
+  max-height: 20ch
 
 .eventLog-text:hover
-  overflow-x: auto
+  overflow: auto
 
   &::-webkit-scrollbar-thumb:horizontal
     border: 0px !important
